# covert_test_tasks

./: CMakeLists.txt  README.md
1_weak_ptr_lock/: CMakeLists.txt  README.md
2_remove_second/: CMakeLists.txt  README.md  remove_second.h  remove_second_test.cpp
3_best_container/: README.md
